[package]
name = "slkrd"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
webrtc = "0.12.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
rand = "0.9"
local-ip-address = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
bytes = "1.5"
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.0", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"